# chessEngine

./: .gitignore  CMakeLists.txt  CustomDataset.h  Makefile  NNUE.cpp  NNUE.h  PVS.cpp  PVS.h  Position.cpp  Position.h  Tables.h  Types.h  compile_commands.json  main.cpp  main.py  tableGenerator.cpp  train.cpp
data/: evals.txt
