cmake_minimum_required(VERSION 3.1)
project(train)
set(CMAKE_PREFIX_PATH ./libtorch)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} -mbmi")
add_executable(train train.cpp Position.cpp NNUE.cpp)
target_link_libraries(train "${TORCH_LIBRARIES}")
set_property(TARGET train PROPERTY CXX_STANDARD 17)